[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/GameScreen.gd" type="Script" id=1]
[ext_resource path="res://Sounds/4lines.wav" type="AudioStream" id=2]
[ext_resource path="res://Prefabs/Block.tscn" type="PackedScene" id=3]
[ext_resource path="res://Backgrounds/background_01.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=5]
[ext_resource path="res://Sounds/placement.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/rotation.wav" type="AudioStream" id=7]
[ext_resource path="res://Prefabs/Field.tscn" type="PackedScene" id=8]

[node name="GameScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="background_01" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="Field" parent="." instance=ExtResource( 8 )]
position = Vector2( 432, 80 )

[node name="AnimOrigin" type="Node2D" parent="."]
position = Vector2( 432, 80 )

[node name="BlockTypes" type="Node2D" parent="."]
position = Vector2( 164.532, 849.253 )

[node name="Type1" parent="BlockTypes" instance=ExtResource( 3 )]
modulate = Color( 0.819608, 0.12549, 0.12549, 1 )

[node name="Type2" parent="BlockTypes" instance=ExtResource( 3 )]
modulate = Color( 0.12549, 0.219608, 0.819608, 1 )
position = Vector2( 45.6378, 0 )

[node name="Type3" parent="BlockTypes" instance=ExtResource( 3 )]
modulate = Color( 0.12549, 0.819608, 0.364706, 1 )
position = Vector2( 90.8787, 0 )

[node name="Type4" parent="BlockTypes" instance=ExtResource( 3 )]
modulate = Color( 0.819608, 0.760784, 0.12549, 1 )
position = Vector2( 134.929, 0 )

[node name="Type5" parent="BlockTypes" instance=ExtResource( 3 )]
modulate = Color( 0.819608, 0.435294, 0.12549, 1 )
position = Vector2( 178.979, 0 )

[node name="Type6" parent="BlockTypes" instance=ExtResource( 3 )]
modulate = Color( 0.819608, 0.12549, 0.807843, 1 )
position = Vector2( 223.03, 0 )

[node name="Type7" parent="BlockTypes" instance=ExtResource( 3 )]
modulate = Color( 0.12549, 0.658824, 0.819608, 1 )
position = Vector2( 267.468, 0 )

[node name="preview" type="Node2D" parent="."]
position = Vector2( 160, 16 )

[node name="currBlock" type="Node2D" parent="."]

[node name="NewBlockPos" type="Node2D" parent="."]
position = Vector2( 560, 48 )

[node name="placementSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 160, 16 )
stream = ExtResource( 6 )

[node name="rotateSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 160, 16 )
stream = ExtResource( 7 )
attenuation = 0.757858

[node name="quadLineSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 160, 16 )
stream = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
margin_left = 911.242
margin_top = 103.079
margin_right = 960.242
margin_bottom = 122.079
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Score"]
margin_left = 61.0
margin_right = 103.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
